arrumando o span#aviso

--- a/css/style.css
+++ b/css/style.css
@@ -73,9 +73,9 @@ button {
 }
 
 .verde {
-    color: green;
+    color: rgb(52, 228, 52);
 }
 
 .vermelho {
-    color: red;
+    color: rgb(255, 70, 70);
 }
