--- a/css/input-text.css
+++ b/css/input-text.css
@@ -1,11 +1,12 @@
-.input {
+.input_text {
     display: flex;
     width: 300px;
     height: 50px;
     justify-content: space-between;
     align-items: center;
 }
-.input input {
+
+.input_text input[type="text"] {
     width: 70%;
     height: 50px;
     border: 1px solid var(--primary-color);
@@ -15,15 +16,11 @@
     background-color: #111;
     color: #fff;
 }
-.input input::-webkit-outer-spin-button,
-.input input::-webkit-inner-spin-button {
-    appearance: none;
-}
 
-.input input:focus {
+.input_text input:focus {
     box-shadow: 0px 0px 6px var(--light-color);
 }
 
-.input label {
+.input_text label {
     font: bold 1.5rem serif;
 }
