--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ main {
     padding-bottom: 50px;
     background-color: #fff;
     width: 400px;
-    height: 600px;
+    height: 700px;
     color: #fff;
     background-color: #111;
     z-index: 1;
@@ -50,7 +50,8 @@ form {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    gap: 10px;
+    gap: 20px;
+    margin-bottom: 20px;
 }
 
 button {
