--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 :root {
     --primary-color: #9613ed;
-    --light-color: #c494eb;
+    --light-color: #cea9ec;
     --dark-color: #8900b3;
     --bg-color: #ec5cff44;
 }
