--- a/css/input-range.css
+++ b/css/input-range.css
@@ -31,7 +31,7 @@
     border-radius: 6px;
     outline: none;
 
-    background-color: #fdfdfd;
+    background-color: var(--light-color);
 
     opacity: 0.9;
     transition: opacity 0.25s ease-in-out;
@@ -41,6 +41,7 @@
     opacity: 1;
 }
 
+/* Chrome */
 .input_range input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
@@ -55,6 +56,7 @@
     cursor: pointer;
 }
 
+/* Firefox */
 .input_range input[type="range"]::-moz-range-thumb {
     width: 16px;
     height: 16px;
